# rust

./: README.md  arrays.rs  display_impl.rs  printing.rs  structs.rs
chapter3_practice/: fibonacci.rs  temp_converter.rs
comp_rects/: .gitignore  Cargo.toml
comp_rects/src/: lib.rs  line.rs  main.rs  point.rs  rectangle.rs
comp_rects/tests/: test_line.rs  test_point.rs
project/guessing_game/: Cargo.toml  README.md
project/guessing_game/src/: main.rs
project/linked_list/: Cargo.toml
project/linked_list/src/: linked_list.rs  main.rs
