[package]
name = "comp_rects"
version = "0.1.0"
authors = ["CaesarJeries <caesar.dakwar@outlook.co.il>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rotating_rectangle"
test = false
bench = false


[dependencies]
gl = "*"
glutin = "*"
approx = "0.4.0"
draw = "0.3.0"
piston = "0.53.0"
piston2d-graphics = "0.40.0"
pistoncore-glutin_window = "0.69.0"
piston2d-opengl_graphics = "0.78.0"
